# Recommendation_Engine

./: .gitignore  README.md  dvc.yaml  models.dvc  pyproject.toml  requirements.txt
config/: project.json
data/: .gitignore  feature_store.dvc  prepared.dvc  processed.dvc  quarantine.dvc  raw.dvc  warehouse.dvc
data/input/: clickstream.csv
docs/: architecture.md  data_versioning_lineage.md  requirements_traceability.md  warehouse_schema.sql
reports/: .gitignore  data_quality.dvc  eda.dvc  experiments.dvc  features.dvc  model_evaluation.dvc  orchestration.dvc
src/recomart/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  pipeline.py  storage.py
src/recomart/feature_store/: store.py
src/recomart/features/: warehouse.py
src/recomart/ingestion/: __init__.py  api_client.py  clickstream.py  dummyjson.py
src/recomart/models/: recommender.py
src/recomart/orchestration/: prefect_flow.py
src/recomart/preparation/: __init__.py  prepare_eda.py
src/recomart/validation/: quality_gate.py  reporting.py
src/recomart_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_clickstream_ingestion.py  test_feature_store.py  test_features.py  test_orchestration.py  test_preparation.py  test_quality_gate.py  test_recommender.py  test_storage.py
