[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recomart-data-pipeline"
version = "0.1.0"
description = "Reproducible data-management pipeline for a recommendation system"
requires-python = ">=3.11"

[project.scripts]
recomart = "recomart.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

